# Awa

./: .editorconfig  .gitignore  README.md  pyproject.toml  render.bat
data/: browser_extensions.app.yml  template.app.yml  windows.app.yml
docs/: browser_extensions.html  windows.html
schemas/: awa.1.0.0.schema.json  spdx_licenses.schema.json
scripts/: check_spdx.py  render.py
templates/: browser_extensions.html.j2  windows.html.j2
templates/i18n/: en-US.html.j2  zh-TW.html.j2
templates/partials/: awesome_list.html.j2  base.html.j2  toc.html.j2
